--- a/Admin/index.html
+++ b/Admin/index.html
@@ -24,7 +24,7 @@
         <div class="col-10 col-md-4 br p-3">
             <p class="text-center h4 p-1">ADMIN PANEL</p>
             <p class="text-center h6 p-1 mb-3">Enter user email and mobile number</p>
-          <form action="/checkuser" method="POST">
+          <form action="/activate-rooms" method="POST">
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">@</span>
               <input
