--- a/user-rooms/production/index.html
+++ b/user-rooms/production/index.html
@@ -14,29 +14,16 @@
       href="https://fonts.googleapis.com/css2?family=Belleza&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Public/signup.css" />
-    <title>ERROR</title>
+    <link rel="stylesheet" href="/Public/user-room.css" />
+    <title>USER-ROOMS</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row row-cols-1">
-        <div class="col mt-5">
-            <div class="h1 text-danger">ERROR 404 FOUND !</div>
-        </div>
-        <div class="col mt-3">
-          <div class="h2">There is no user in this email or mobile number</div>
-          <div class="h6">
-            <a href="/admin" target="_self" rel="noopener noreferrer"
-              >Back to Admin Page</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="root"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="/user-rooms.js"></script>
   </body>
 </html>
