commit 4 adding new files

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -26,7 +26,7 @@
               <a
                 class="nav-link h5 text-color"
                 href="/logIn"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
                 >Login</a
               >
@@ -35,7 +35,7 @@
               <a
                 class="nav-link h5 text-color"
                 href="/signUp"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
                 >Sign-Up</a
               >
@@ -51,16 +51,11 @@
             <a
               href="/logIn"
               class="text-color text-color h5"
-              target="_blank"
+              target="_self"
               rel="noopener noreferrer"
               >Login</a
             >
           </button>
-        </div>
-        <div class="col text-center text-color h5 mt-5">Scroll down</div>
-        <div class="col d-flex align-items-center flex-column">
-          <div class="down"></div>
-          <div class="down"></div>
         </div>
       </div>
     </div>
