--- a/Dashboard/Production/index.html
+++ b/Dashboard/Production/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="/Public/home.css" />
     <title>Document</title>
   </head>
   <body>
