--- a/Loginpage/index.html
+++ b/Loginpage/index.html
@@ -19,7 +19,13 @@
   </head>
   <body>
     <div class="container-fluid section">
-      <p class="text-center h1 p-4 sign-header">HO-YO</p>
+      <div class="row">
+        <div class="col text-center">
+          <a href="/" target="_self" class="h1 p-4 sign-header"
+            >HO-YO</a
+          >
+        </div>
+      </div>
       <div class="row row-cols-1 justify-content-center mt-5">
         <div class="col-10 col-md-4 br p-3">
           <p class="text-center h4 p-1">Login</p>
@@ -37,27 +43,32 @@
               />
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">$</span>
-                <input
-                  type="tel"
-                  class="form-control"
-                  placeholder="Phone number"
-                  pattern="[0-9]{10}"
-                  aria-label="number"
-                  name="phonenumber"
-                  aria-describedby="basic-addon1"
-                  minlength="9"
-                  maxlength="10"
-                  required
-                />
-              </div>
-              <button class="btn btn-primary">Login</button>
+              <span class="input-group-text" id="basic-addon1">$</span>
+              <input
+                type="tel"
+                class="form-control"
+                placeholder="Phone number"
+                pattern="[0-9]{10}"
+                aria-label="number"
+                name="phonenumber"
+                aria-describedby="basic-addon1"
+                minlength="9"
+                maxlength="10"
+                required
+              />
+            </div>
+            <button class="col btn btn-primary">Login</button>
           </form>
-
         </div>
-        
+      </div>
+      <div class="row row-cols-1 mt-1">
+        <div class="col text-center h5">or</div>
+        <div class="col text-center h5">
+          <a href="/signUp" target="_self" rel="noopener norefer">SignUp</a>
+        </div>
       </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
