--- a/SignUpPage/index.html
+++ b/SignUpPage/index.html
@@ -19,7 +19,11 @@
   </head>
   <body>
     <div class="container-fluid section">
-      <p class="text-center h1 p-4 sign-header">HO-YO</p>
+      <div class="row">
+        <div class="col text-center">
+          <a href="/" target="_self" class="h1 p-4 sign-header">HO-YO</a>
+        </div>
+      </div>
       <div class="row row-cols-1 justify-content-center mt-5">
         <div class="col-10 col-md-4 br p-3">
           <p class="text-center h4 p-1">Sign-Up</p>
@@ -67,6 +71,12 @@
               </div>
               <button class="btn btn-primary">Signup</button>
           </form>
+        </div>
+      </div>
+      <div class="row row-cols-1 mt-1">
+        <div class="col text-center h5">or</div>
+        <div class="col text-center h5">
+          <a href="/login" target="_self" rel="noopener norefer">Login</a>
         </div>
       </div>
     </div>
