--- a/user-rooms/production/index.html
+++ b/user-rooms/production/index.html
@@ -25,5 +25,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/user-rooms.js"></script>
+    <script src="/internetCheck/internetCheck.js"></script>
   </body>
 </html>
