--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="/Public/home.css" />
     <title>Home-Page</title>
+    
   </head>
   <body>
     <div class="container-fluid section">
@@ -64,5 +65,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="/internetCheck/internetCheck.js"></script>
   </body>
 </html>
