--- a/Loginpage/index.html
+++ b/Loginpage/index.html
@@ -74,5 +74,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="/internetCheck/internetCheck.js"></script>
   </body>
 </html>
